# auto-codabench

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  autocodabench-orchestrator  codabench-bundle  competition-design  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
auto_codabench/: .env.example  INSTRUCTION_FOR_USER.md  README.md  run.py
auto_codabench/examples/: ingestion.py  scoring.py
auto_codabench/mcp_server/: bundle_io.py  config.py  mcp.py  run_log.py  server.py
auto_codabench/mcp_server/tools/: bundle.py  package.py  validate.py
auto_codabench/runs/: log_hook.py
auto_codabench/skills/autocodabench-implement/: README.md  SKILL.md
auto_codabench/skills/codabench-bundle/: README.md  SKILL.md
auto_codabench/skills/competition-design/: README.md  SKILL.md
auto_codabench/skills/orchestrator/: SKILL.md
auto_codabench/skills/plan/: README.md
docs/: INSTRUCTION_FOR_USER.md  architecture.md  autocodabench_checks.md  codabench-upload-api.md  demo-for-reviewers.md  design-rationale.md  scientific-validation.md  validate-bundle-walkthrough.md  verification-catalog.md
documentation/codabench_bundle_upload/: README.md  upload_bundle.py
documentation/codabench_getting_started/docs/Developers_and_Administrators/: Robot-submissions.md  Running-tests.md
documentation/mcp/: 00-preface.md  01-mcp-intuitive.md  02-mcp-technical.md  03-build-an-mcp-server.md  04-design-a-semantic-scholar-server.md  05-this-repo-walkthrough.md  06-call-flowchart.md
experiments/backbone_bench/: README.md  run_judge_bench.py
experiments/backbone_bench/results/claude/: results.json  results.md
experiments/backbone_bench/results/deterministic-only/: results.json  results.md
experiments/bundle_creation_test/: MISSING_INFO.md  PIPELINE_WALKTHROUGH.md  README.md  setup.sh
experiments/bundle_creation_test/agents/: submission-log-auditor.md
experiments/bundle_creation_test/runs/: .gitignore
experiments/bundle_creation_test/scripts/: aggregate_missing_info.py
experiments/bundle_creation_test/skills/bundle-creation-test/: SKILL.md
scripts/: deploy_hf.sh  make_demo_fixture.py
src/autocodabench/: __init__.py  auth.py  run_log.py  run_log_hook.py
src/autocodabench/agent/: __init__.py  pipeline.py  prompts.py  research.py
src/autocodabench/backends/: __init__.py  base.py  claude.py  local_tools.py  openai_compat.py  replay.py
src/autocodabench/backends/fixtures/: demo_bundle.jsonl
src/autocodabench/checks/: __init__.py  api.py  attestations.py  base.py  deterministic.py  facts.py  judged.py  render.py  report.py
src/autocodabench/cli/: __init__.py  main.py  style.py
src/autocodabench/core/: __init__.py  bundle_io.py  config.py
src/autocodabench/mcp/: __init__.py  instance.py  server.py
src/autocodabench/mcp/tools/: __init__.py  (+7 more)
src/autocodabench/runner/: __init__.py  execution.py
src/autocodabench/skills/: __init__.py
src/autocodabench/upload/: __init__.py  codabench_api.py  service.py
tests/: conftest.py  test_auth.py  test_checks.py  test_cli.py  test_cli_style.py  test_core_bundle_io.py  test_docker_engine.py  test_openai_compat.py  test_pipeline_phases.py  test_replay_backend.py
web/: README.md  app.py  chainlit.md  config.py  phase_manager.py  requirements.txt  session_manager.py  streaming.py
web/.chainlit/: config.toml
web/phases/: validate.py
web/public/: chat.js  login.css
(+60 files in other folders)
