[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocodabench"
version = "0.2.0.dev0"
description = "Agentic authoring and pre-launch validation of Codabench competition bundles."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Khuong T.G. Hieu" }]
license = "MIT"
keywords = ["codabench", "competition", "benchmark", "agent", "mcp", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # 2.14.7 specifically — looser constraints like `>=2.0.0,<3.0.0` let
    # pip's solver pick a buggy 2.x release on HF where the OAuth-proxy
    # submodule imports a name that doesn't exist in `auth.auth`.
    "fastmcp==2.14.7",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    # Proposal ingestion (`create --pdf`). Pure-Python, light; imported
    # lazily so keyless validator/replay paths never load it.
    "pypdf>=4",
    # The agentic layer. Imported lazily — the deterministic validator and
    # replay demo work even where the bundled Claude Code runtime can't run.
    "claude-agent-sdk>=0.2.80",
    # Phase-1 research: `kaggle` powers the first-party Kaggle competition
    # discovery tools (search + full description) in the MCP server. Imported
    # lazily, so the keyless validator/replay paths never load it — but it now
    # ships in the base install so a plain `pip install -e .` (and the HF Space
    # image) has the full agentic capability with no extra. The OpenAlex source
    # uses the external `openalex-research-mcp` server via `npx` (no Python dep).
    "kaggle>=1.6",
]

[project.optional-dependencies]
# Test-only tooling — deliberately NOT in base deps so the runtime install
# (and the HF Space image) never pull a test framework. Run the suite with
# `pip install -e '.[dev]'`.
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/ktgiahieu/auto-codabench"
Issues = "https://github.com/ktgiahieu/auto-codabench/issues"

[project.scripts]
autocodabench = "autocodabench.cli.main:main"
autocodabench-mcp-server = "autocodabench.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autocodabench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
